# score

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  DEEP_ARCHITECTURE_REVIEW.md  INSTALL.md  INSTALL.txt  LICENSE.txt  Observation.txt  README  README.md  TODO.txt  appveyor.yml  azure-pipelines.yml  build.sh  engine.cpp  engine.hpp  graphicstimeevent.cpp  graphicstimeevent.hpp  graphicstimeprocess.cpp  graphicstimeprocess.hpp  graphicsview.cpp  graphicsview.hpp  i-score-remote.pro  i-score.pro  i-scoreRecast.pro  itemTypes.hpp  llfio_test.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  nm-applet  q  renovate.json5  score-wasm.pro
Tests/Integration/: CMakeLists.txt  IscoreIntegrationTests.cpp  IscoreIntegrationTests.hpp  SerializationTest.cpp  Test1.cpp  test-removal.cpp  test-stacks.cpp
Tests/testbed/: CMakeLists.txt  README  testbed.cpp  testbed.hpp
base/: CMakeLists.txt  create-addon.sh  dequarantine-addons.sh  iscore_core.kdev4  main.cpp  quarantine-addons.sh
base/addon-skeleton/: CMakeLists.txt  README.md  iscore_addon_skeleton.cpp  iscore_addon_skeleton.hpp  score_addon_skeleton.cpp  score_addon_skeleton.hpp
base/addons/: CMakeLists.txt
base/app/: Application.cpp  Application.hpp  CMakeLists.txt  Info.plist.in  Info.plist.ios  StaticApp.cmake  UnityApp.cmake  i-score.sh  mac_main.m  main.cpp  score.sh
base/app-android/: AndroidManifest.xml.cmake  CMakeLists.txt  configAndroid.json.cmake  main.cpp
base/app-nacl/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
base/app-remote/: CMakeLists.txt  RemoteApplication.cpp  RemoteApplication.hpp  main.cpp
base/app-test/: CMakeLists.txt  TestApplication.cpp  TestApplication.hpp  TestObject.hpp  TestSetup.cmake  main.cpp
base/component-wrapper/: CMakeLists.txt
base/core/: QNamedObject  utilsCPP11.hpp
base/interface/: CMakeLists.txt
base/lib/: CMakeLists.txt
base/player/: CMakeLists.txt  QMLPlayer.qml  device_example.cpp  get_library_path.cpp  get_library_path.hpp  main.cpp  network_example.cpp  player.cpp  player.hpp  player_impl.hpp  player_qml_plugin.cpp  player_qml_plugin.hpp
base/plugin_interface/: AutoconnectFactoryPluginInterface.hpp  CustomCommandFactoryPluginInterface.hpp  LibraryElementFactoryPluginInterface.h  LibraryElementFactoryPluginInterface.hpp  MenuCommandFactoryPluginInterface.h  MenuCommandFactoryPluginInterface.hpp  PanelFactoryPluginInterface.h  PanelFactoryPluginInterface.hpp  ProcessFactoryPluginInterface.h  ProcessFactoryPluginInterface.hpp  SettingsFactoryPluginInterface.h  SettingsFactoryPluginInterface.hpp
base/plugins/: CMakeLists.txt  commands.sh  sc.sh
base/plugins2/: BaseElementFactoryPluginInterface.h  PanelFactoryPluginInterface.h  ProcessFactoryPluginInterface  ProcessFactoryPluginInterface.h
base/plugins_interface/: IScorePlugin.h
base/remote/: CMakeLists.txt  RemoteApplication.cpp  RemoteApplication.hpp  RemoteContext.hpp  WebSocketClient.cpp  WebSocketClient.hpp  WidgetKind.hpp  ZeroconfListener.cpp  ZeroconfListener.hpp  iscore-remote-ui.pro  main.cpp  qml.qrc
base/testapp/: CMakeLists.txt  main.cpp
base/vstpuppet/: CMakeLists.txt  vstpuppet.cpp
src/: CMakeLists.txt
src/addon-skeleton/: README.md  score_addon_skeleton.hpp
src/addons/: CMakeLists.txt
src/app/: AppLauncher.cpp  Application.cpp  Application.hpp  BodyBasics.rc  CMakeLists.txt  Info.plist.in  StartScreen.hpp  StaticApp.cmake  UnityApp.cmake  entitlements.plist  mac_main.m  main.cpp  resource.h
src/clappuppet/: CMakeLists.txt  Info.plist.in  clappuppet.cpp  entitlements.plist
src/fxdesigner/: CMakeLists.txt  designer.cpp  handles.hpp  inspector.cpp  inspector.hpp  view.cpp  view.hpp  widget.cpp  widget.hpp
src/lib/: CMakeLists.txt
src/linuxcheck/: CMakeLists.txt  diagnostics.hpp  font.hpp  linuxcheck.cpp  wayland.cpp  x11.cpp
src/lv2puppet/: CMakeLists.txt  Info.plist.in  entitlements.plist  lv2puppet.cpp
src/mcp-server/: CMakeLists.txt  main.cpp
src/player/: CMakeLists.txt  device_example.cpp  get_library_path.cpp  main.cpp  network_example.cpp  player.cpp  player.hpp  player_impl.hpp  player_qml_plugin.cpp  player_qml_plugin.hpp
src/plugins/: CMakeLists.txt  commands.sh
src/vst3puppet/: CMakeLists.txt  Info.plist.in  vst3puppet.cpp
src/vstpuppet/: CMakeLists.txt  Info.plist.in  vstpuppet.cpp  window.cpp
src/websockets/: test.html
tests/: CMakeLists.txt  main.cpp  test_command.cpp
tests/Integration/: CMakeLists.txt  PortSerializationTest.cpp  SerializationTest.cpp  score_integration.hpp  test-all-processes-exec.cpp  test-all-processes.cpp  test-removal.cpp  test-selection.cpp
tests/Mocks/: MockDevice.hpp
tests/benchmarks/: bench_absmax.cpp
tests/fixtures/: CMakeLists.txt
tests/gfx/: CMakeLists.txt  CsfCubeArray.cpp  CsfGeometry.cpp  CsfImage.cpp  CsfImage3d.cpp  Gfx.cpp  GfxAssetTableEviction.cpp  GfxAudio.cpp  GfxControl.cpp  GfxDepthSampler.cpp  GfxDynamicSlot.cpp  GfxExecutionModel.cpp  GfxGStreamerBusClassify.cpp  GfxIncremental.cpp  GfxIncrementalAdd.cpp  GfxIncrementalCommon.hpp  GfxIncrementalEdgeDefer.cpp  GfxIncrementalFindings.cpp  GfxMultiview.cpp  GfxNodeRemoval.cpp  GfxRaster.cpp  GfxRegressions.cpp  GfxRtChanged.cpp  GfxScatterDispatch.cpp  GfxStorageVisibility.cpp  GfxVsa.cpp  GfxVsaCull.cpp  IsfFilter.cpp  IsfFindings.cpp  IsfImageInputs.cpp  IsfMrt.cpp  IsfMrtPersistent.cpp  IsfMultipass.cpp  IsfPersistent.cpp  IsfTestCommon.hpp  IsfUniforms.cpp  IsfUnsupported.cpp
tests/hardware/: CMakeLists.txt  README-aja-wiring.md  probe-aja.sh  probe-decklink.sh  probe-display.sh  probe-magewell.sh  probe-pipewire.sh  run-hardware-test.sh
tests/integration/: CMakeLists.txt  DocumentLifecycleTest.cpp  DocumentRoundtripTest.cpp  EncoderMatrixTest.cpp  JsProcessTest.cpp  ObjectGallery.cpp  RegressionDoubleExitTest.cpp  RegressionMinimalAppTwiceTest.cpp  RegressionNullPresenterSelectionTest.cpp  RegressionPanelDeclineTest.cpp  RegressionPanelNullSlotLookupTest.cpp  RegressionPanelPluginLoadTest.cpp  RegressionPdEmptyScriptTest.cpp  RegressionPresenterDrainTest.cpp  ScenarioUndoTest.cpp  (+12 more)
(+13176 files in other folders)
